# MicroBenchmarkforBF

./: BloomFilter.cpp  BloomFilterCreateArrowKernel.cpp  BloomFilterUseKernel.cpp  BloomFilter_avx2.cpp  CMakeLists.txt  Column.cpp  ColumnIndex.cpp  ColumnIterator.cpp  ColumnName.cpp  RecordBatchHasher.cpp  Sample.cpp  Scalar.cpp  Schema.cpp  TupleSet.cpp  TupleSetShowOptions.cpp  Util.cpp  main.cpp
include/: ArrayHelper.hpp  Arrays.hpp  BloomFilter.hpp  BloomFilterCreateArrowKernel.hpp  BloomFilterUseKernel.hpp  Column.hpp  ColumnIndex.hpp  ColumnIterator.hpp  ColumnName.hpp  DummyNode.hpp  JoinType.hpp  RecordBatchHasher.hpp  Sample.hpp  Scalar.hpp  Schema.hpp  TableHelper.hpp  TupleSet.hpp  TupleSetShowOptions.hpp  Util.hpp
